#454: Search functionality in course list views #455: Delete a course assignment #456: Unpublish a course #457: Better keyboard support in dialog boxes #458: Fixied sizes for some dialog box #459: Provide expand/collapse buttons in course view #460: Launch lesson in a new tab from course #461: Many questions page type in small screen (Many in earlier check-ins)

--- a/www/_code/css/nlapp.scss
+++ b/www/_code/css/nlapp.scss
@@ -186,10 +186,6 @@ $animation-duration: 200ms !default;
 //-----------------------------------------------------------------------------------------
 // nl specific styling - lib_ui modules
 //-----------------------------------------------------------------------------------------
-.nl-20 {
-    width: 20%;
-}
-
 .nl-border-bottom {
     border-bottom: 1px dotted black;
 }
@@ -223,8 +219,16 @@ $animation-duration: 200ms !default;
   }
 }
 
-.nl-center, td.nl-center, div.nl-center, span.nl-center {
-  text-align : center;
+.nl-styled {
+  text-align : left;
+  background-color: $nlgrey;
+  border: 1px solid #FFFFFF;
+}
+
+.nl-24 {
+    width: 32px;
+    height: 32px;
+    padding: 4px;
 }
 
 .nl-clickable {
@@ -577,8 +581,8 @@ nl-cards {
   width: 30%;
   text-align: center;
   img {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
   }
 }
 
@@ -618,10 +622,13 @@ a.nl-card-img:hover, a.nl-card-img:focus {
   }
 }
 
-.nl-card-details-dlg {
-  &> img {
-    float: right;
+.nl-card-details-dlg-img {
+  height: 100px;
+  width: 100px;
+  text-align: center;
+  img {
     max-height: 100px;
+    max-width: 100px;
   }
 }
 
